--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <a href="#">bağlantı</a>
 <a href="#">hakkında</a>
 </nav>
-<section><h2>eğitim geçmişi</h2></section>
+<section><h2>eğitim geçmişı</h2></section>
 <p><em>front </em> <span>end </span>öğrencisi</p>
 <p>merhaba</p> 
 
